# KEIJI

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  STATUS.md  TASK_BOARD.md  pyproject.toml
.github/workflows/: tests.yml
config/: approval_policy.v1.yaml  external_access_policy.v1.yaml  product_identity_rules.v1.yaml  profit_rules.v1.yaml  risk_policy.v1.yaml
data/samples/: market_observations.example.csv  offline_candidates.example.csv  offline_candidates.template.csv
docs/: P3_P4_integration_flow.md  P3_profit_engine_spec.md  P4_product_identity_engine_spec.md  PRD.md  approval_policy.md  architecture.md  blocked_actions_policy.md  codex_review_assist_policy.md  codex_review_human_checklist.md  local_offline_operation_guide.md  manual_input_guide.md  manus_handoff_policy.md  manus_human_checklist.md  non_engineer_review_guide.md  operations_manual.md  task_board_workflow.md  test_plan.md
docs/decisions/: ADR-0001-project-boundary.md  ADR-0002-no-auto-purchase.md  ADR-0003-p4-before-p3.md
docs/progress/: 2026-05-12-api-prep-log.md  2026-05-12-overnight-log.md  2026-05-13-ops-progress-log.md  2026-05-13-p7-progress-log.md
docs/yahoo-developer-registration/: README.md  index.html  official_source_notes.md  privacy.html  registration_values.md  terms.html
scripts/: export_audit_log.py  export_review_csv.py  export_review_report.py  export_status_report.py  local_smoke.py  owner_smoke.py  review_candidate.py  run_offline_batch.py  validate_candidates.py
src/keiji/: __init__.py
tests/contract/: test_amazon_listing_adapter_contract.py
(+131 files in other folders)
